--- a/client/go/packaging/windows-msi/com.winwisely99.app.wxs
+++ b/client/go/packaging/windows-msi/com.winwisely99.app.wxs
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-    <Product Id="*" UpgradeCode="*" Version="" Language="1033" Name="com.winwisely99.app" Manufacturer="com.winwisely99.app">
+    <Product Id="*" UpgradeCode="*" Version="" Language="1033" Name="com.whitelabel" Manufacturer="com.whitelabel">
         <Package InstallerVersion="300" Compressed="yes"/>
-        <Media Id="1" Cabinet="com.winwisely99.app.cab" EmbedCab="yes" />
+        <Media Id="1" Cabinet="com.whitelabel.cab" EmbedCab="yes" />
         <Directory Id="TARGETDIR" Name="SourceDir">
             <Directory Id="ProgramFilesFolder">
-                <Directory Id="APPLICATIONROOTDIRECTORY" Name="com.winwisely99.app">
+                <Directory Id="APPLICATIONROOTDIRECTORY" Name="com.whitelabel">
                     <Directory Id="ASSETSDIRECTORY" Name="assets"/>
                     <Directory Id="FLUTTERASSETSDIRECTORY" Name="flutter_assets">
                         <?include directories.wxi ?>
@@ -13,13 +13,13 @@
                 </Directory>
             </Directory>
             <Directory Id="ProgramMenuFolder">
-                <Directory Id="ApplicationProgramsFolder" Name="com.winwisely99.app"/>
+                <Directory Id="ApplicationProgramsFolder" Name="com.whitelabel"/>
             </Directory>
         </Directory>
         <Icon Id="ShortcutIcon" SourceFile="build/assets/icon.ico"/>
         <DirectoryRef Id="APPLICATIONROOTDIRECTORY">
-            <Component Id="com.winwisely99.app.exe" Guid="*">
-                <File Id="com.winwisely99.app.exe" Source="build/com.winwisely99.app.exe" KeyPath="yes"/>
+            <Component Id="com.whitelabel.exe" Guid="*">
+                <File Id="com.whitelabel.exe" Source="build/com.whitelabel.exe" KeyPath="yes"/>
             </Component>
             <Component Id="flutter_engine.dll" Guid="*">
                 <File Id="flutter_engine.dll" Source="build/flutter_engine.dll" KeyPath="yes"/>
@@ -37,17 +37,17 @@
         <DirectoryRef Id="ApplicationProgramsFolder">
             <Component Id="ApplicationShortcut" Guid="*">
                 <Shortcut Id="ApplicationStartMenuShortcut"
-                          Name="com.winwisely99.app"
+                          Name="com.whitelabel"
                           Description="Demonstrates how to use the News module."
-                          Target="[#com.winwisely99.app.exe]"
+                          Target="[#com.whitelabel.exe]"
                           WorkingDirectory="APPLICATIONROOTDIRECTORY"
                           Icon="ShortcutIcon"/>
                 <RemoveFolder Id="CleanUpShortCut" On="uninstall"/>
-                <RegistryValue Root="HKCU" Key="Software\com.winwisely99.app\com.winwisely99.app" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
+                <RegistryValue Root="HKCU" Key="Software\com.whitelabel\com.whitelabel" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
             </Component>
         </DirectoryRef>
-        <Feature Id="MainApplication" Title="com.winwisely99.app" Level="1">
-            <ComponentRef Id="com.winwisely99.app.exe"/>
+        <Feature Id="MainApplication" Title="com.whitelabel" Level="1">
+            <ComponentRef Id="com.whitelabel.exe"/>
             <ComponentRef Id="flutter_engine.dll"/>
             <ComponentRef Id="icudtl.dat"/>
             <ComponentRef Id="icon.png"/>
